--- a/Contacts.html
+++ b/Contacts.html
@@ -66,7 +66,7 @@
                 </a>
             </div>
             <div class="contact">
-                <a href="https://github.com/hervamto">
+                <a href="https://github.com/verefer">
                     <img src="img/github_logo.png" alt="GitHub Logo">
                     <p>GitHub</p>
                 </a>
